# pyaneti

./: .gitignore  LM-WH.py  README.md  binary.py  default.py  fit_trrv.py  fmcmc.f90  frv.f90  ftr.f90  input_rv.py  makefile  mcmc_rv.py  meson.build  phase.py  planet_eclipse.py  plot_data.py  prepare_data.py  print_errors.py  print_values.py  pyaneti.py  pyproject.toml  quad.f90  requirements.txt  run_pyaneti.py  rv_fitting.py  rv_fmcmc.py  todo-py.py  todo.f90  transit_fmcmc.py
inpy/K2-233_final/: input_fit.py
inpy/TOI-560-1gp/: input_fit.py
inpy/TOI-560-1gp-activity-indicator/: input_fit.py
inpy/example_full_k2100/: input_fit.py
inpy/example_multiband/: input_fit.py  multiband_transits.ipynb
inpy/example_multiband_k2100/: input_fit.py
inpy/example_single/: example_single.ipynb  input_fit.py
inpy/example_timeseries_k2100/: input_fit.py
inpy/example_toyp1/: input_fit.py  toy_model1.ipynb
inpy/example_toyp2/: input_fit.py  toy_model2.ipynb
inpy/test/: input_fit.py
inpy/test_2p/: input_fit.py
pyaneti_extras/: citlalatonac.py  synthetic_k2100.ipynb
pyaneti_extras/.ipynb_checkpoints/: synthetic_k2100-checkpoint.ipynb  toy_model1-checkpoint.ipynb
src/: bayesian.f90  constants.f90  default.py  fit_all.f90  frv.f90  ftr.f90  kernels.f90  matrices.f90  mcmc.f90  multi-gp-routines.f90  output.py  plot_data.py  plot_rv.py  plot_tr.py  prepare_data.py  print_values.py  qpower2.f90  quad.f90  todo-py.py  todo.f90
